# pycpp_project_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  rename_project.sh
bindings/python/: CMakeLists.txt  module.cpp
bindings/python/myproject/: __init__.py
cmake/: ProjectConfig.cmake.in  myprojectConfig.cmake.in
examples/: CMakeLists.txt  example.py
include/myproject/: myproject.hpp
src/: CMakeLists.txt
unittest/: CMakeLists.txt  test_basic.cpp
